[package]
name = "hms-mqtt-publish"
version = "0.2.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1.0.82"
env_logger = "0.11.3"
hms2mqtt = { path = "hms2mqtt" }
log = "0.4.21"
rumqttc = "0.24.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_derive = "1.0.201"
toml = "0.8.12"
rustls-native-certs = "0.7.0"
rand = "0.8.5"
clap = { version = "4.5.4", features = ["derive"] }
serde_yaml = "0.9.34"

[package.metadata.cargo-machete]
ignored = ["serde"]
