[package]
name = "hms2mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
crc16 = "0.4.0"
log = "0.4.21"
protobuf = "3.4.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.117"
serde_derive = "1.0.199"
chrono = "0.4.38"
bytes = "1.6.0"
rand = "0.8.5"
serde_yaml = "0.9.34"

[build-dependencies]
protobuf-codegen = "3.4.0"
